--- a/templates/booking_form.html
+++ b/templates/booking_form.html
@@ -14,7 +14,7 @@
             <img src="../static/img/el_churrete.png" alt="">
             <ul class="header-nav-links">
                 <a class="btn" href="/">Home</a>
-                <a class="btn" href="/reserva_lista">Lista</a>
+                <a class="btn" href="/booking/list">Lista</a>
             </ul>
           
         </div>
