--- a/templates/index.html
+++ b/templates/index.html
@@ -21,19 +21,19 @@
         <h1 id="title">Gestión de reservas</h1>
     </header>
     <main>
-        <form action="/reserva/agregar/" >
-            <label for="contacto">Contacto</label>
-            <input  id="contacto" name="contacto"  type="text" requeried>
+        <form action="/booking/add/" >
+            <label for="contact">Contacto</label>
+            <input  id="contact" name="contact"  type="text" requeried>
             <label for="email">Email</label>
             <input  id="email" name="email"  type="text" requeried>
-            <label for="telefono">teléfono</label>
-            <input  id="telefono" name="telefono"  type="text">
-            <label for="fechaPrevista">Fecha prevista</label>
-            <input  id="fechaPrevista" name="fechaPrevista"  type="text" requeried>
-            <label for="horaPrevista">Hora prevista</label>
-            <input  id="horaPrevista" name="horaPrevista"  type="text" requeried>
-            <label for="plazas">plazas</label>
-            <input  id="plazas" name="plazas"  type="text" requeried>
+            <label for="phone">teléfono</label>
+            <input  id="phone" name="phone"  type="text">
+            <label for="expectedDate">Fecha prevista</label>
+            <input  id="expectedDate" name="expectedDate"  type="text" requeried>
+            <label for="expectedHour">Hora prevista</label>
+            <input  id="expectedHour" name="expectedHour"  type="text" requeried>
+            <label for="people">plazas</label>
+            <input  id="people" name="people"  type="text" requeried>
         </form>
     </main>
     <footer>
