--- a/static/css/global.css
+++ b/static/css/global.css
@@ -33,22 +33,37 @@ header{
 
 main{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    
     .list{
-        width: 100%;
-        height:200px;
+        width: 90%;
+        height:300px;
         display: block;
         overflow: auto;
         white-space: nowrap;
+        th{
+            border: 2px solid;
+            font-weight: bold;
+            padding-right: 50px;
+        }
     }
     form{
+        margin-top: 20px;
+        width: 200px;
         display: flex;
         flex-direction: column;
+        input{
+            margin-bottom: 10px;
+        }
+        input[type='submit']{
+            margin-top: 10px;
+            padding: 5px;
+        }
     }
 }
 
 .centeredAtNucleo {
-
     top: 0;
     left: 0;
     right: 0;
