--- a/templates/booking_form.html
+++ b/templates/booking_form.html
@@ -11,34 +11,37 @@
 <body>
     <header>
         <div id = "header-nav">
-            <img src="../static/img/el_churrete.png" alt="?????????????">
+            <img src="{{url_for('static', filename='img/el_churrete.png')}}" alt="?????????????">
             <ul class="header-nav-links">
                 <a class="btn" href="/">Home</a>
                 <a class="btn" href="/booking/list">Lista</a>
             </ul>
           
         </div>
-        <h1 id="title">Form reserva</h1>
+        <h1 id="title">Editar reserva</h1>
     </header>
     <main>
-        <Form  action="/booking/edited/10" method="post">
-            <label for="establecimiento">Establecimiento</label>
-            <input id="establecimiento" name ="establecimiento"  disabled ="true" type="number" value=1>
+        <Form  action="/booking/edited/{{booking[0]}}" method="post">
             <label for="idReserva">Reserva</label>
-            <input id="idReserva" name ="idReserva" disabled ="true" type="number" value="{{booking.id}}">
+            <input id="idReserva" name ="idReserva" disabled ="true" type="number" value={{booking[0]}}>
+            <label for="establecimiento">Establecimiento</label>
+            <input id="establecimiento" name ="establecimiento"  disabled ="true" type="number" value={{booking[1]}}>
+            <label for="estado">Estado</label>
+            <input id="estado" name ="estado"  disabled ="true" type="number" value={{booking[2]}}>
             <label for="contact">Contacto</label>
-            <input id="contact" name ="contact" type="text" value="{{booking.contact}}">
+            <input id="contact" name ="contact" type="text" value={{booking[3]}}>
             <label for="email">Email</label>
-            <input id="email" name ="email" type="email" value="{{booking.email}}">
+            <input id="email" name ="email" type="email" value={{booking[4]}}>
             <label for="phone">Teléfono</label>
-            <input id="phone" name ="phone" type="number" value="{{booking.phone}}">
+            <input id="phone" name ="phone" type="number" value={{booking[5]}}>
+            <label for="contactDate">Fecha contacto</label>
+            <input id="contactDate" name ="contactDate" disabled ="true" type="date" value={{booking[6]}}>
             <label for="expectedDate">Fecha prevista</label>
-            <input id="expectedDate" name ="expectedDate" type="date" value="{{booking.expectedDate}}">
+            <input id="expectedDate" name ="expectedDate" type="date" value={{booking[7]}}>
             <label for="expectedHour">Hora prevista</label>
-            <input id="expectedHour" name ="expectedHour" type="time"  value="{{booking.expectedHour}}">
+            <input id="expectedHour" name ="expectedHour" type="time"  value={{booking[8]}}>
             <label for="people">Plazas</label>
-            <input id="people" name ="people" type="number" value="{{booking.people}}">
-
+            <input id="people" name ="people" type="number" value={{booking[9]}}>
             <input type="submit" value ="Guardar">
         </Form>
     </main>
