agregando gestion de cuenta

--- a/templates/account_form_edit.html
+++ b/templates/account_form_edit.html
@@ -12,6 +12,7 @@
             <img src="{{url_for('static', filename='img/el_churrete.png')}}" alt="?????????????">
             <ul class="header-nav-links">
                 <a class="btn" href="/">Home</a>
+                <a class="btn" href="/booking/list/">Reservas</a>
                 <a class="btn" href="/account/list">Cuentas</a>
                 <a class="btn" href="/account/new/">Nueva cuenta</a>
             </ul>
@@ -28,18 +29,11 @@
             <input id="idBooking" name ="idBooking" disabled ="true" type="number" value={{accounts[2]}}>
             <label for="entryDate">Fecha entrada</label>
             <input id="entryDate" name ="entryDate" disabled ="true" type="date" value={{accounts[3]}}>
-            
             <label for="departureDate">Fecha salida</label>
             <input id="departureDate" name ="departureDate" disabled ="true" type="date"  value={{accounts[4]}}>
-            
             <label for="people">Plazas</label>
             <input id="people" name ="people" type="number" value={{accounts[5]}}>
             <button type="submit">Guardar</button>
-
-            
-            
-            
-
         </Form>
         <form action="/account/confirmEntry/{{ accounts[0] }}" method="POST">
             <button type="submit">Confirmar entrada</button>
