--- a/static/css/global.css
+++ b/static/css/global.css
@@ -3,7 +3,25 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+.btn{
+    text-decoration: none;
+    background-color: cadetblue;
+    color: white;
+    width: 100px;
+    min-width: 100px;
+    margin-right: 5px;
+    text-align: center;
+}
+.btn:hover{
+    text-decoration: underline;
+}
+.centeredAtNucleo {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+}
 header{
     #header-nav{
         display: flex;
@@ -50,6 +68,14 @@ main{
             padding-right: 50px;
         }
 
+        form{
+            display: inline;
+            button{
+                width: 100%;
+                height: 20px;
+            }
+        }
+
     }
     form{
         margin-top: 20px;
@@ -64,23 +90,4 @@ main{
             padding: 5px;
         }
     }
-}
-.btn{
-    text-decoration: none;
-    background-color: cadetblue;
-    color: white;
-    width: 100px;
-    min-width: 100px;
-    margin-right: 5px;
-    text-align: center;
-}
-.btn:hover{
-    text-decoration: underline;
-}
-.centeredAtNucleo {
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
 }
