--- a/templates/account_list.html
+++ b/templates/account_list.html
@@ -27,6 +27,7 @@
                     <th>Fecha salida</th>
                     <th>Personas</th>
                     <th>Reserva</th>
+                    <th>Cuenta</th>
                     <th>Acción</th>
                 </tr>
             </thead>
@@ -36,10 +37,20 @@
                 <td>{{ account[3] }}</td>
                 <td>{{ account[4] }}</td>
                 <td>{{ account[5] }}</td>
-                <td>{{ account[2] }}</td>
                 <td>
-                    <a class ="btn" href="/account/edit/{{ account[0] }}">Editar</a>
-                    <a class ="btn" href="/booking/edit/{{ account[2] }}">Reserva</a>
+                    <form action="/booking/edit/{{ account[2] }}" method="POST">
+                        <button type="submit">{{ account[2] }}</button>
+                    </form>
+
+                </td>
+                <td>
+                    <form action="/account/edit/{{ account[0] }}" method="POST">
+                        <button type="submit">{{ account[0] }}</button>
+                    </form>
+                </td>
+                <td>
+                    <a class ="btn" href="/account/confirmEntry/{{ account[0] }}">Entrada</a>
+                    <a class ="btn" href="/account/confirmDeparture/{{ account[0] }}">Salida</a>
                 </td>
             </tr>
             {% endfor %}
