--- a/templates/booking_list.html
+++ b/templates/booking_list.html
@@ -15,7 +15,11 @@
                 <a class="btn" href="/">Home</a>
                 <a class="btn" href="/account/list/">Cuentas</a>
                 <a class="btn" href="/account/new/">Nueva cuenta</a>
-            </ul>
+                <a class="btn" href="/booking/autoCancel/">Auto-Cancelar Reserva</a>
+            </ul>       
+            <div class="nav-burger">
+
+            </div>
         </div>
     </header>
     <main>
@@ -60,10 +64,6 @@
     <footer>
         
     </footer>
-
-    <div class="nav-burger">
-
-    </div>
 </body>
 </html>
 
