--- a/static/css/global.css
+++ b/static/css/global.css
@@ -60,13 +60,16 @@ main{
             border: 2px solid;
             font-weight: bold;
             padding-right: 50px;
+            margin-right: 20px;
         }
 
         form{
             display: inline;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
             button{
                 width: 100%;
-                height: 20px;
             }
         }
 
