--- a/templates/account_form_edit.html
+++ b/templates/account_form_edit.html
@@ -44,6 +44,9 @@
         <form action="/account/confirmDeparture/{{ accounts[0] }}" method="POST">
             <button type="submit">Confirmar salida</button>
         </form>
+        <form action="/account/diningTableAssign/{{ accounts[0] }}" method="POST">
+            <button type="submit">Asignar mesa</button>
+        </form>
     </main>
     <footer>
 
