--- a/templates/booking_list.html
+++ b/templates/booking_list.html
@@ -39,32 +39,34 @@
                     <th>Acción</th>
                 </tr>
             </thead>
-            {% for booking in bookings %}
-            <tr>
-                <td>{{ booking[1] }}</td>
-                <td>{{ booking[2] }}</td>
-                <td>{{ booking[3] }}</td>
-                <td>{{ booking[4] }}</td>
-                <td>{{ booking[5] }}</td>
-                <td>{{ booking[7] }}</td>
-                <td>{{ booking[8] }}</td>
-                <td>
-                    <form action="/booking/edit/{{ booking[0] }}" method="POST">
-                        <button type="submit">{{ booking[0] }}</button>
-                    </form>
-                </td>
-                <td>
-                    <form action="/account/editByIdBooking/{{ booking[0] }}" method="POST">
-                        <button type="submit">Editar</button>
-                    </form>
-                </td>
-                <td>
-                    <form action="/booking/cancel/{{ booking[0] }}" method="POST">
-                        <button type="submit">Cancelar</button>
-                    </form>
-                </td>
-            </tr>
-            {% endfor %}
+            <tbody>
+                {% for booking in bookings %}
+                <tr>
+                    <td>{{ booking[1] }}</td>
+                    <td>{{ booking[2] }}</td>
+                    <td>{{ booking[3] }}</td>
+                    <td>{{ booking[4] }}</td>
+                    <td>{{ booking[5] }}</td>
+                    <td>{{ booking[7] }}</td>
+                    <td>{{ booking[8] }}</td>
+                    <td>
+                        <form action="/booking/edit/{{ booking[0] }}" method="POST">
+                            <button type="submit">{{ booking[0] }}</button>
+                        </form>
+                    </td>
+                    <td>
+                        <form action="/account/editByIdBooking/{{ booking[0] }}" method="POST">
+                            <button type="submit">Editar</button>
+                        </form>
+                    </td>
+                    <td>
+                        <form action="/booking/cancel/{{ booking[0] }}" method="POST">
+                            <button type="submit">Cancelar</button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
         </table>
     </main>
     <footer>
