previo al README

--- a/templates/account_form_edit.html
+++ b/templates/account_form_edit.html
@@ -47,6 +47,9 @@
         <form action="/account/diningTableAssign/{{ accounts[0] }}" method="POST">
             <button type="submit">Asignar mesa</button>
         </form>
+        <form action="/account/diningTable/{{ accounts[0] }}" method="POST">
+            <button type="submit">Ver mesa</button>
+        </form>
     </main>
     <footer>
 
